# amazon-nova-samples

./: .gitignore
customization/SageMakerJobsMonitoring/: get_training_time_estimate.py
customization/bedrock-distillation/: utils.py
customization/sagemaker-tjhp-email-notifs/: README.md  enable_sagemaker_job_notifs.py  hp_job_notification_template.yaml  tj_job_notification_template.yaml
multimodal-embeddings/: README.md
multimodal-embeddings/getting-started/: .gitignore  00_setup.ipynb  README.md  pdf_to_png.py  (+9 more)
multimodal-understanding/nova-meta-prompter/: README.md  nova_metaprompter_showcase.ipynb  pyproject.toml  transform.py
multimodal-understanding/repeatable-patterns/31-nova-stream-parser/: .gitignore  NovaStreamParser_Tutorial.ipynb  README.md  pyproject.toml  sample_usage.py
multimodal-understanding/repeatable-patterns/31-nova-stream-parser/NovaStreamParser/: constants.py  helpers.py  nova_event_stream.py  nova_parsed_event_stream.py  nova_response_parser.py  nova_response_stream_handler.py
nova-act/: README.md
nova-act/usecases/qa-testing/tests/: .env.sample  .gitignore  BLOG_POST_SUMMARY.md  CODE_WALKTHROUGH.md  README.md  TEST_FAILURE_ANALYSIS.md  TEST_FIX_SUMMARY.md  pyproject.toml
nova-act/usecases/qa-testing/tests/src/: conftest.py  test_runner.py
nova-act/usecases/qa-testing/tests/src/config/: __init__.py  app_config.py  decorators.py  exceptions.py
nova-act/usecases/qa-testing/tests/src/nova_act_qa_tests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nova-act/usecases/qa-testing/tests/src/test_data/: 03-product-display-test.json  06-login-button-test.json  07-about-page-test.json  09-page-load-performance-test.json  10-link-validation-test.json  12-button-functionality-test.json  15-ui-layout-test.json
nova-act/usecases/qa-testing/tests/src/utils/: __init__.py  _types.py  directories.py  exceptions.py  nova_act.py  test_loader.py
speech-to-speech/: README.md
(+187 files in other folders)
