[project]
name = "nova-metaprompter"
version = "0.1.0"
description = "Transform prompts to align with Amazon Nova guidelines."
readme = "README.md"
authors = [
    { name = "Arlind Nocaj", email = "arlind.nocaj@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.47",
    "jupyter>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["transform.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
