[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-stream-parser"
version = "0.1.0"
description = "A Python package for parsing and processing streaming responses from AWS Bedrock Nova models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.9",
]

[tool.setuptools.packages.find]
include = ["NovaStreamParser*"]
exclude = ["local*", "tests*"]
